# zuki-workspace-shoutgame

./: README.md  build-pipeline.sh  build-pipeline.yml
.metadata/: version.ini
EncryptionService/: .bzrignore  .project  pom.xml
ErgoServer/: .project  pom.xml
EwsApi/: .project  pom.xml
FacebookService/: .bzrignore  .classpath  .project  deploy_stage.sh  pom.xml
GameplayDomain/: .bzrignore  .project  pom.xml
HttpConnectorService/: .bzrignore  .classpath  .project  pom.xml
HttpUtils/: .project  pom.xml
IdentityService/: .classpath  .project  pom.xml
MeincCommons/: .bzrignore  .classpath  .project  pom.xml
MeincLauncher/: .project  deploy.xml  inject-into-knop.bat  inject-into-test.bat  inject-into-tomcat.bat  jar-injector.bat  make-test-jar.bat  pom.xml  run-test-jar.bat  test.properties
MeincOverlord/: .bzrignore  .project  ShoutWorkingSets.psf  bootstrap.sh  pom.xml
MrSoaDistributedData/: .project  pom.xml
MrSoaKernel/: .classpath  .project  build-osgi.sh  pom.xml
MrSoaServiceAssembler/: .classpath  .project  pom.xml
MrSoaSupport/: .bzrignore  .project  pom.xml
MyBatisStandaloneTester/: .classpath  .project
NotificationService/: .bzrignore  .project  pom.xml
OsgiBoneCp/: .project  pom.xml
OsgiCommonsCollections/: .project  pom.xml
OsgiCommonsPool/: .project  pom.xml
OsgiIbatis-dep/: .project  pom.xml
server/srd-server/project/: Cargo.toml  build-local.sh  build.sh  default.conf  servers.conf
server/srd-server/project/src/: chan.rs  conf.rs  dispatcher.rs  listener.rs  main.rs  service.rs  token.rs  worker.rs
(+2991 files in other folders)
